[package]
name = "quick_bc"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bio = "1.3.1"
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
flate2 = "1.0.28"
itertools = "0.11.0"
log = "0.4.19"
niffler = "2.5.0"
rand = "0.8.5"
rand_distr = "0.4.3"
seq_io = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
gzp = { version = "*" }
noodles = { version = "0.79.0", features = ["bam"] }
bstr = "1.10.0"
hdf5-sys = { version = "0.8.1", features = ["static"] }
hdf5 = "0.8.1"
